--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "keywords": [],
   "author": "jaguar",
+  "engines": {
+    "node": "16.11.0"
+  },
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
